--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,5 +1,6 @@
-cindent (2.0.20101031) unstable; urgency=low
+cindent (2.0.20101102) unstable; urgency=low
 
+  * format lex/yacc files
   * improve messages for unterminated indent-off comment
 
  -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 25 Oct 2010 18:55:21 -0400
