--- a/tdindent.1
+++ b/tdindent.1
@@ -1,4 +1,4 @@
-.\" $Id: tdindent.1,v 1.6 2010/10/29 21:53:49 tom Exp $
+.\" $Id: tdindent.1,v 1.7 2010/11/04 23:46:16 tom Exp $
 .\" Copyright:  2010 by Thomas E. Dickey
 .\"
 .\" Permission is hereby granted, free of charge, to any person obtaining a
@@ -57,6 +57,16 @@ or in a configuration-specific location.
 convert tabs to spaces in the updated file.
 The script relies on the settings from the \fB\-\-profile\fP option
 to get the tab-size for expansion.
+.TP 5
+\-D
+after pre-filtering,
+show the changes that this script passes to the \fI\*n\fP program.
+This and the \fB\-N\fP option are useful for verifying that the
+macros which are filtered are handled correctly. 
+.TP 5
+\-N
+do not execute the \fI\*n\fP program.
+Only perform the pre-filtering and post-filtering stages.
 .SS FILE TYPES
 The wrapper script checks each file's suffix.
 It accepts these:
